# openapi-diff-checker

./: LICENSE  README.md  pyproject.toml
openapi_diff_checker/: __init__.py  checker.py  cli.py
tests/: test_checker.py  test_defaults.py
