[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openapi-diff-checker"
version = "0.1.0"
description = "Verify if two OpenAPI files are functionally equivalent"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["pyyaml>=6.0"]

[project.scripts]
openapi-diff-checker = "openapi_diff_checker.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
